--- a/lab-3/laboratorio-3.ipynb
+++ b/lab-3/laboratorio-3.ipynb
@@ -14,12 +14,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. ¿Cuál es el tamaño en bytes de un array de 1000 elementos de tipo booleano?"
+    "### Problema 1\n",
+    "\n",
+    "¿Cuál es el tamaño en bytes de un array de 1000 elementos de tipo booleano?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,13 +46,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Problema 2\n",
     "\n",
-    "2. Cree un array cuyos elementos sean los enteros pares en [1,100] y en orden decreciente. Muestre los 10 últimos por pantalla."
+    "Cree un array cuyos elementos sean los enteros pares en [1,100] y en orden decreciente. Muestre los 10 últimos por pantalla."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +85,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Dado el array\n",
+    "### Problema 3\n",
+    "\n",
+    "Dado el array\n",
     "```\n",
     "2 4 5 6 \n",
     "0 3 7 4 \n",
@@ -105,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,12 +146,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Dados los arrays a = [1, 4, 2, 7] y b = [1, 3, 2, 9], obtenga la media aritmética de la diferencia (a-b)."
+    "### Problema 4\n",
+    "\n",
+    "Dados los arrays a = [1, 4, 2, 7] y b = [1, 3, 2, 9], obtenga la media aritmética de la diferencia (a-b)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +181,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Tengo valores de cordenadas (x, y) en las columnas del array\n",
+    "### Problema 5\n",
+    "\n",
+    "Tengo valores de cordenadas (x, y) en las columnas del array\n",
     "\n",
     "```\n",
     "1.33 4.5\n",
@@ -189,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,22 +225,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Copie el array del ejercicio anterior. Traspóngalo.\n",
+    "### Problema 6\n",
+    "\n",
+    "Copie el array del ejercicio anterior. Traspóngalo.\n",
     " \n",
     " - Agregue ahora dos nuevos pares de coordenadas: (10.8, 3.0) y (35.8, 12.0)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.33 30.   70.2  37.1  10.8  35.8  10.8  35.8 ]\n",
-      " [ 4.5  10.7   0.5  -3.6   3.   12.    3.   12.  ]]\n"
+      "[[ 1.33 30.   70.2  37.1  10.8  35.8 ]\n",
+      " [ 4.5  10.7   0.5  -3.6   3.   12.  ]]\n"
      ]
     }
    ],
@@ -261,12 +272,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. ¿Cuántos Municipios tienen más de 100000 habitantes?."
+    "### Problema 1\n",
+    "\n",
+    "¿Cuántos Municipios tienen más de 100000 habitantes?."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +299,7 @@
        "Name: Municipio, Length: 62, dtype: object"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,12 +320,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Realice una gráfica de barras sobre la población de cada ciudad, ordenela de menor a mayor y responda:"
+    "### Problema 2\n",
+    "\n",
+    "Realice una gráfica de barras sobre la población de cada ciudad, ordenela de menor a mayor y responda:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +367,7 @@
        "'Barcelona'"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +449,7 @@
        "272 -3.600019  37.176419  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,25 +464,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. ¿Cuántos municipios de Extremadura tienen más de 5000 habitantes?."
+    "### Problema 3\n",
+    "\n",
+    "¿Cuántos municipios de Extremadura tienen más de 5000 habitantes?."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Empty DataFrame\n",
+      "Columns: [FID, OBJECTID, Texto, Poblacion, CodMun, Municipio, CodProvin, Provincia, X, Y]\n",
+      "Index: []\n",
       "No data with Extremadura\n"
      ]
     }
    ],
    "source": [
     "extremadura_data = data[data['Provincia'] == 'Extremadura']\n",
-    "extremadura_data\n",
+    "print(extremadura_data)\n",
     "\n",
     "print(\"No data with Extremadura\")"
    ]
@@ -477,12 +497,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. ¿Cuál es el municipio situado más al Norte? (Usar el valor de la coordenada \"Y\" que representa la latitud en grados). Proporcione también la provincia a la que pertenece y su población."
+    "### Problema 4\n",
+    "\n",
+    "¿Cuál es el municipio situado más al Norte? (Usar el valor de la coordenada \"Y\" que representa la latitud en grados). Proporcione también la provincia a la que pertenece y su población."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -509,12 +531,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Obtenga la media, mediana, desviación estándar, valor máximo y valor mínimo de la población de los municipios de la provincia de Granada."
+    "### Problema 5\n",
+    "\n",
+    "Obtenga la media, mediana, desviación estándar, valor máximo y valor mínimo de la población de los municipios de la provincia de Granada."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -544,40 +568,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "7. Seleccione al azar cincuenta municipios diferentes de entre los diponibles en el archivo. Asegúrese de que no se repitan. ¿Luego calcule el promedio de la población y la desviación estándar de esto 50 municipios?."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"None of [Int64Index([292, 406, 218, 264, 552, 384, 171, 521, 295, 523,\\n            ...\\n            161, 625, 741, 802, 154, 534,  76, 844, 714, 850],\\n           dtype='int64', length=851)] are in the [columns]\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/luisramilian/Documents/Data Science Master/Trimestre 1/Ciencia de Datos en Python/laboratorios/data-science-ug/lab-3/laboratorio-3.ipynb Cell 30\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/luisramilian/Documents/Data%20Science%20Master/Trimestre%201/Ciencia%20de%20Datos%20en%20Python/laboratorios/data-science-ug/lab-3/laboratorio-3.ipynb#X54sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dataset \u001b[39m=\u001b[39m data[np\u001b[39m.\u001b[39;49mrandom\u001b[39m.\u001b[39;49mchoice(\u001b[39mrange\u001b[39;49m(data\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m] \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m ),size\u001b[39m=\u001b[39;49mdata\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m] \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m,replace\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/luisramilian/Documents/Data%20Science%20Master/Trimestre%201/Ciencia%20de%20Datos%20en%20Python/laboratorios/data-science-ug/lab-3/laboratorio-3.ipynb#X54sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dataset \u001b[39m=\u001b[39m dataset[:\u001b[39m50\u001b[39m]\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/frame.py:3511\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3509\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3510\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 3511\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[1;32m   3513\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3514\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:5782\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   5779\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   5780\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 5782\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[1;32m   5784\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   5785\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[1;32m   5786\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:5842\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   5840\u001b[0m     \u001b[39mif\u001b[39;00m use_interval_msg:\n\u001b[1;32m   5841\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 5842\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   5844\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[1;32m   5845\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"None of [Int64Index([292, 406, 218, 264, 552, 384, 171, 521, 295, 523,\\n            ...\\n            161, 625, 741, 802, 154, 534,  76, 844, 714, 850],\\n           dtype='int64', length=851)] are in the [columns]\""
-     ]
-    }
-   ],
-   "source": [
-    "dataset = data[np.random.choice(range(data.shape[0] -1 ),size=data.shape[0] -1,replace=False)]\n",
-    "dataset = dataset[:50]"
+    "### Problema 6\n",
+    "Realice un histograma con la población de los Municipios para cada una de las provincias."
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Problema 7 \n",
+    "\n",
+    "7. Seleccione al azar cincuenta municipios diferentes de entre los diponibles en el archivo. Asegúrese de que no se repitan. ¿Luego calcule el promedio de la población y la desviación estándar de esto 50 municipios?."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media: 46336.88\n",
+      "Desviacion Estandar: 63709.13066257633\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = data.sample(frac=1)\n",
+    "dataset = dataset[:50]\n",
+    "\n",
+    "dataset_people = dataset[\"Poblacion\"]\n",
+    "\n",
+    "print(f\"Media: {dataset_people.mean()}\")\n",
+    "print(f\"Desviacion Estandar: {dataset_people.std()}\")\n"
+   ]
   },
   {
    "attachments": {},
