--- a/project-1/main.ipynb
+++ b/project-1/main.ipynb
@@ -1772,6 +1772,127 @@
         "avg_error_LotFrontage = mse(test_y, average_predictions)\n",
         "print(avg_error_LotFrontage)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 334,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>X</th>\n",
+              "      <th>errors_model</th>\n",
+              "      <th>sk_errors_model</th>\n",
+              "      <th>avg_errors_model</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>OverallQual</td>\n",
+              "      <td>3.078650e+09</td>\n",
+              "      <td>2.184648e+09</td>\n",
+              "      <td>2.459411e+09</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1stFlrSF</td>\n",
+              "      <td>3.916182e+09</td>\n",
+              "      <td>3.997114e+09</td>\n",
+              "      <td>3.932702e+09</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>TotRmsAbvGrd</td>\n",
+              "      <td>5.027198e+09</td>\n",
+              "      <td>5.023087e+09</td>\n",
+              "      <td>5.024406e+09</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>YearBuilt</td>\n",
+              "      <td>7.091949e+09</td>\n",
+              "      <td>5.642957e+09</td>\n",
+              "      <td>5.855031e+09</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>LotFrontage</td>\n",
+              "      <td>7.310082e+09</td>\n",
+              "      <td>6.604668e+09</td>\n",
+              "      <td>6.762444e+09</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "              X  errors_model  sk_errors_model  avg_errors_model\n",
+              "0   OverallQual  3.078650e+09     2.184648e+09      2.459411e+09\n",
+              "1      1stFlrSF  3.916182e+09     3.997114e+09      3.932702e+09\n",
+              "2  TotRmsAbvGrd  5.027198e+09     5.023087e+09      5.024406e+09\n",
+              "3     YearBuilt  7.091949e+09     5.642957e+09      5.855031e+09\n",
+              "4   LotFrontage  7.310082e+09     6.604668e+09      6.762444e+09"
+            ]
+          },
+          "execution_count": 334,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "errors_model = [error_overall, error_1stFlrSF, error_TotRmsAbvGrd, error_YearBuilt, error_LotFrontage]\n",
+        "sk_errors_model = [sk_error_overall, sk_error_1stFlrSF, sk_error_TotRmsAbvGrd, sk_error_YearBuilt, sk_error_LotFrontage]\n",
+        "avg_errors_model =  [avg_error_overall, avg_error_1stFlrSF, avg_error_TotRmsAbvGrd, avg_error_YearBuilt, avg_error_LotFrontage]\n",
+        "\n",
+        "error_data = {'X': [OVERALL_QUAL, FIRST_FLOOR_SQUARE_FEET, TOTAL_ROOMS,  YEAR_BUILT, LINEAR_FEET_OF_STREET],\n",
+        " 'errors_model': errors_model,\n",
+        " 'sk_errors_model': sk_errors_model,\n",
+        " 'avg_errors_model': avg_errors_model }\n",
+        "\n",
+        "\n",
+        "errors_data_frame = pd.DataFrame(error_data)\n",
+        "errors_data_frame.sort_values(by=\"errors_model\", ascending=True)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Conclusiones "
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. La mayor correlación entre la variable independiente y la dependiente es la calidad de los materiales (OverallQual) con valor de `0.790982`, por lo que el error es el más pequeño.\n",
+        "   - `3078650222.0008693` para el modelo propio \n",
+        "   - `2184648345.2134256` para el modelo de la librería **sklearn.linear_model**\n",
+        "\n",
+        "2. El modelo de la librería **sklearn.linear_model** tiene un error más pequeño para cada una de las variables independientes. "
+      ]
     }
   ],
   "metadata": {
